# mozi

./: .pylintrc  README.md  makefile  pyproject.toml  pytest.ini  requirements.txt
.devcontainer/: devcontainer.json
.github/workflows/: lint.yml  test.yml
mozi/: db.py  logger.py  utils.py
mozi/api/: __init__.py  api_logger.py  app.py  errors.py
mozi/utils/: __init__.py  logger.py
tests/: test_logger.py  test_utils.py
tests/data/: config.yml  tmp.yml
tests/test_api/: main.py  test_api_errors.py
tests/test_db/: base.py  test_user.py  user.py
